[package]
name = "ring-rt"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pin-utils = "0.1"
iou = "0.2"
uring-sys = "1.0.0-beta"
futures-intrusive = { path = "../futures-intrusive" }
