[package]
name = "ring-rt"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
futures-intrusive = "0.3"
iou = "0.2"
libc = "0.2"
pin-utils = "0.1"
uring-sys = "1.0.0-beta"

[dev-dependencies]
anyhow = "1"
httparse = "1"

[patch.crates-io]
futures-intrusive = { version = "0.3", git = "https://github.com/ubnt-intrepid/futures-intrusive.git", branch = "owned-semaphore-releaser" }
uring-sys = { version = "1.0.0-beta", git = "https://github.com/withoutboats/uring-sys.git", rev = "056707f" }
